# SWE

./: CMakeLists.txt  SConstruct
analytical/: dam_break_soltion.mw
src/: AdvectionFiniteVolumes.cpp  AdvectionFiniteVolumes.h  GalerkinSWE.cpp  GalerkinSWE.h  LaxFriedrichsSolver.cpp  LaxFriedrichsSolver.h  NodalAdvection.cpp  NodalAdvection.h  SConscript  WavePropagation.cpp  WavePropagation.h  main.cpp  types.h
src/scenarios/: AdvectionGalerkin.h  SWEGalerkin.h  dambreak.h  gaussian.h
src/tools/: args.h
src/writer/: AdvectionWriter.h  DGWriter.h  GalerkinWriter.h  VtkWriter.h
